--- a/src/upload/upload.scss
+++ b/src/upload/upload.scss
@@ -1,8 +1,24 @@
 #upload {
    padding-top: 50px;
+   #upload-img {
+    width: 200px;
+    height: 200px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid #eee;
+    margin-left:16px;
+    img {
+        width:50px;
+        height: 50px;
+    }
+}
    table {
        border-collapse: collapse;
        width: 100%;
+      
+       
        td {
            border-collapse: collapse;
            &:nth-child(1){
