슬라이드 완성

--- a/src/detailView/detail.scss
+++ b/src/detailView/detail.scss
@@ -30,7 +30,8 @@
     }
 }
 .btn {
-    button {
+    padding-top: 50px;
+    span {
         margin: 20px 6px;
         padding: 10px 20px;
         background-color: tomato;
